# GnG

./: .clang-format  .clangd  CMakeLists.txt  Doxyfile  README.md
.github/: release.yml
.github/workflows/: release.yml
libs/: CMakeLists.txt
libs/GnG/: CMakeLists.txt
libs/GnG/cmake/: Installing.cmake
src/: main.cc
